kubernetes/bracelet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bracelet-service
spec:
  selector:
    app: bracelet-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
