kubernetes/montre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: montre-service
spec:
  type: NodePort
  selector:
    app: montre-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31000
