kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /montres
            pathType: Prefix
            backend:
              service:
                name: montre-service
                port:
                  number: 80
          - path: /bracelets
            pathType: Prefix
            backend:
              service:
                name: bracelet-service
                port:
                  number: 80
